 * Introduce new template fragment and block level enclosure tags for easier template composition (Thibaud Colas)
 * Add a `classnames` template tag to easily build up classes from variables provided to a template (Paarth Agarwal)
 * Migrate the dashboard (home) view header to the shared header template and update designs (Paarth Agarwal)
 * Switch all report workflow, redirects, site settings views to use Wagtail’s reusable header component (Paarth Agarwal)
 * Update classes and styles for the shared header templates to align with UI guidelines (Paarth Agarwal)
 * Clean up multiple eslint rules usage and configs to align better with the Wagtail coding guidelines (LB (Ben Johnston))
 * Add inline toolbar for Draftail, to avoid clashing with the page’s header (Thibaud Colas)
 * Add command palette in rich text editor to change text format with the keyboard only (Thibaud Colas)
 * Add a live-updating character count to the Draftail rich text editor (Thibaud Colas)
 * Add rich text editor paste to auto-create links (Thibaud Colas)
 * Add rich text editor text shortcuts undo, to allow typing text normally detected as a shortcut (Thibaud Colas)
 * Add support for right-to-left (RTL) languages to the rich text editor (Thibaud Colas)
 * Change rich text editor placeholder to follow the user’s focus on empty blocks (Thibaud Colas)
 * Add rich text editor empty block highlight by showing their block type (Thibaud Colas)
 * Make ModelAdmin InspectView footer actions consistent with other parts of the UI (Thibaud Colas)
 * Introduce a new auto-updating preview panel inside the page editor (Sage Abdullah)
 * Add support for Twitter and other text-only embeds in Draftail embed previews (Iman Syed, Paarth Agarwal)
 * Use new modal dialog component for privacy settings modal (Sage Abdullah)
 * Add `menu_item_name` to modify MenuItem's name for ModelAdmin (Alexander Rogovskyy, Vu Pham)