@@ -292,6 +292,7 @@ label.required:after {
   @include clearfix();
   padding-top: 0.5em;
   padding-bottom: 1.2em;
+  list-style: none;
 }
 
 .field-row {
